# gpx-viewer

./: .dockerignore  .env  .env.example  .gitignore  README.md  docker-compose.yml  index.html
app/: .coverage  Dockerfile  db.py  main.py  models.py  pyproject.toml  requirements.txt  track_stats.py
app/static/: datenschutz.html  impressum.html  index.html  stats.test.mjs
app/tests/: conftest.py  test_db_migration.py  test_track_stats.py
tests/: conftest.py  test_api.py
