[project]
name = "gpx-viewer"
version = "0.1.0"
description = "GPX track upload and visualization service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "SQLAlchemy==2.0.34",
    "psycopg2-binary==2.9.9",
    "geoalchemy2==0.15.2",
    "shapely==2.0.6",
    "gpxpy==1.6.2",
    "python-multipart==0.0.9",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-cov>=7.1.0",
]

[tool.uv]
package = false
